Changes main page

--- a/index.html
+++ b/index.html
@@ -116,11 +116,15 @@
             <div class="intro">
              <p> I originally hail from Mumbai, India. While working at a tech company in India, I dreamt about being in Bay area where most talented programmers come together to work from across the globe.
 							 I am proudly living my dream right now; I work with briliant people at <a href="https://www.yelp.com/engineering">Yelp</a> at core web team.</p>
-						 <p> I am a logically minded, friendly, and an ambitious coder.
-							 I put efforts in being mentally and physically fit. I am currently into skiing and aerial workout with lyra. When my friends or family come to me with doubts/hesitations about themselves, I often end up convincing them they can do anything.</p>
-							 <p> Book I am currently reading: <a href="https://www.amazon.com/Everything-Store-Jeff-Bezos-Amazon-ebook/dp/B00BWQW73E"> The Everything Store </a>
-							 <p> Causes I care about: Equality, Education & Literacy, Health</p>
-							 <p>Fields I contribute to: EdTech, Technology, Volunteering & Mentoring</p>
+						 <p> I am a logically minded, friendly, and a lifetime of a learner.
+                             I read a lot of books. 
+                             I put efforts in being mentally and physically fit. I am currently into skiing, yoga and aerial workout with lyra. 
+                             When my friends or family come to me with doubts/hesitations about themselves, 
+                             I often end up convincing them they can do anything.
+                             I post about everyday life of coder, some of my workouts and travel pics on my Instagram account (@tanviOnInsta) </p>
+							 <p><b>Book I am currently reading:</b> <a href="https://www.amazon.com/Everything-Store-Jeff-Bezos-Amazon-ebook/dp/B00BWQW73E"> The Everything Store </a>
+							 <p> <b>Causes I care about:</b> Equality, Education & Literacy, Health</p>
+							 <p><b>Fields I contribute to:</b> EdTech, Technology, Volunteering & Mentoring</p>
               </p>
             </div>
          </div>
@@ -133,7 +137,7 @@
 
             <div class="col">
                <h2><i class="icon-globe"></i>Yelp | Aug 2017 - Present</h2>
-               <p>Software Engineer</p>
+               <p>Engineering Manager</p>
             </div>
 
             <div class="col">
@@ -185,23 +189,48 @@
 
 		   <!-- Speaking Wrapper -->
 		   <div id="speaking-wrapper">
+                <div class="col speaking-item">
+                        <a href="#" data-reveal-id="modal-03">
+                            <div class="item-wrap">
+                                    <img width="420" src="images/speaking/exapt-woman-mentoring1.jpg" alt=""/>
+                                    <div class="speaking-item-meta">
+                                        <h5>Speed Mentoring Event, Yelp</h5>
+                                    </div>
+                            </div>
+                        </a>
+                   </div>
+
+                   <div class="col speaking-item">
+                        <a href="#" data-reveal-id="modal-04">
+                            <div class="item-wrap">
+                                    <img width="420" src="images/speaking/wwcode.jpg" alt=""/>
+                                    <div class="speaking-item-meta">
+                                        <h5>WWCode Connect 2018, Twitter HQ</h5>
+                                    </div>
+                            </div>
+                        </a>
+                   </div>
 
 			   <div class="col speaking-item">
-               <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-01"><img src="images/speaking/exapt-woman-mentoring.jpg" alt=""/></a>
-					   <div class="speaking-item-meta">
-						   <h5><a href="#">Speed Mentoring Event, Yelp</a></h5>
-					   </div>
-               </div>
+                    <a href="#" data-reveal-id="modal-01">
+                        <div class="item-wrap">
+                                <img width="420" src="images/speaking/exapt-woman-mentoring.jpg" alt=""/>
+                                <div class="speaking-item-meta">
+                                    <h5>Speed Mentoring Event, Yelp</h5>
+                                </div>
+                        </div>
+                    </a>
 			   </div>
 
             <div class="col speaking-item">
-               <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-02"><img src="images/speaking/thesis-defence.jpg" alt=""/></a>
-					   <div class="speaking-item-meta">
-						   <h5><a href="#">Thesis Defense, Arizona State University</a></h5>
-					   </div>
-               </div>
+                    <a href="#" data-reveal-id="modal-02">
+                        <div class="item-wrap">
+                                <img src="images/speaking/thesis-defence.jpg" alt=""/>
+                                <div class="speaking-item-meta">
+                                    <h5>Thesis Defense, Arizona State University</h5>
+                                </div>
+                        </div>
+                    </a>
 			   </div>
 
 		   </div> <!-- speaking Wrapper End -->
@@ -214,14 +243,14 @@
 	   =========================================================== -->
 
       <!-- modal-01 -->
-	   <div id="modal-01" class="reveal-modal reveal-modal-small">
+	   <div id="modal-01" class="reveal-modal">
 
-		   <img class="scale-with-grid" width="400" height="200" src="images/speaking/modals/m-exapt-woman-mentoring.jpg" alt="" />
+		   <img class="scale-with-grid" width="600" height="400" src="images/speaking/modals/m-exapt-woman-mentoring.jpg" alt="" />
 
 		   <div class="description-box">
 			   <h4>Speed Mentoring Event, Yelp</h4>
 			   <p>Women from some of the largest tech companies in bay area came together to offer mentoring for other women fellow for speed mentoring event organized by <a href="">'The Expat Woman'</a> in SF hosted by Yelp on 7th Feb, 2018.</p>
-            <span class="categories"><i class="icon-tag"></i>Metoring, Speaking</span>
+            <span class="categories"><i class="icon-tag"></i>Metoring, Women Empowerment</span>
 		   </div>
 
          <div class="link-box">
@@ -254,30 +283,31 @@
       <!-- modal-03 -->
 	   <div id="modal-03" class="reveal-modal">
 
-		   <img class="scale-with-grid" src="images/speaking/modals/m-eve.jpg" alt="" />
-
-		   <div class="description-box">
-			   <h4>Eve</h4>
-			   <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-            <span class="categories"><i class="icon-tag"></i>Photography, Branding</span>
-         </div>
-
-         <div class="link-box">
-            <a href="http://www.behance.net">Details</a>
-		      <a class="close-reveal-modal">Close</a>
-         </div>
-
-	   </div> <!-- modal-03 End -->
+            <img class="scale-with-grid" width="600" height="400" src="images/speaking/modals/m-exapt-woman-mentoring1.jpg" alt="" />
+ 
+            <div class="description-box">
+                <h4>Speed Mentoring Event, Yelp</h4>
+                <p>Women from some of the largest tech companies in bay area came together to offer mentoring for other women fellow for speed mentoring event organized by <a href="">'The Expat Woman'</a> in SF hosted by Yelp on 26th June, 2018.</p>
+             <span class="categories"><i class="icon-tag"></i>Metoring, Women Empowerment</span>
+            </div>
+ 
+          <div class="link-box">
+             <a href="https://www.eventbrite.com/e/women-in-tech-speed-mentoring-event-yelp-sf-tickets-45082840991">Details</a>
+               <a class="close-reveal-modal">Close</a>
+          </div>
+ 
+        </div><!-- modal-03 End -->
 
       <!-- modal-04 -->
 	   <div id="modal-04" class="reveal-modal">
 
-		   <img class="scale-with-grid" src="images/speaking/modals/m-sneaker-splash.jpg" alt="" />
+		   <img class="scale-with-grid" src="images/speaking/modals/m-wwcode.jpg" alt="" />
 
 		   <div class="description-box">
-			   <h4>Sneaker Splash</h4>
-			   <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-            <span class="categories"><i class="icon-tag"></i>Photography, Branding</span>
+			   <h4>WWCode Connect 2018, Twitter HQ</h4>
+               <p>WWCode CONNECT 2018 brings together speakers from around the world to share their stories and expertise about technology.</p>
+               <p>I gave a technical talk on "How to Survive Legacy Code Jungle" based on case study of Yelp.</p>
+            <span class="categories"><i class="icon-tag"></i>Women in tech, Tech talk, Software Development</span>
          </div>
 
          <div class="link-box">
@@ -666,7 +696,7 @@
          <div class="col">
 
 					 <h3>I love to try different cuisines and learn about cultures at places I visit.</h3>
-             <h3>Look at my favourite <a href="">photos</a> I clicked from around the world.</h3>
+             <h3>Look at my favourite <a href="https://www.instagram.com/tanvioninsta/?hl=en">photos</a> I clicked from around the world.</h3>
 
          </div>
 
@@ -683,11 +713,11 @@
 
    <!-- Map Section
    ================================================== -->
-   <section id="map">
+   <!--section id="map">
 
       <p class="map-error">Something went wrong... Unable to load map... Please try to enable javascript</p>
 
-   </section> <!-- Map Section End-->
+   </section--> <!-- Map Section End-->
 
     <!-- Contact Section
    ================================================== -->
@@ -696,57 +726,15 @@
       <div class="row section-head">
          <div class="col full">
             <h2>Contact</h2>
-            <p class="desc">Get in touch with me.</p>
-         </div>
+             <ul class="social-links">
+               <li>Let's connect on <a href="https://www.linkedin.com/in/tanvipatel25/"><i class="icon-linkedin"></i></a></li>
+               <li>Follow me on <a href="https://www.instagram.com/tanvioninsta/?hl=en"><i class="icon-instagram"></i></a></li>
+               <li> Write me at tanvip (at) asu (dot) edu</li>
+            </ul>
+        </div>
       </div>
 
-      <div class="row">
-
-         <div class="col full">
-
-            <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
-					<fieldset>
-
-                  <div>
-						   <label for="contactName">Name <span class="required">*</span></label>
-						   <input name="contactName" type="text" id="contactName" size="35" value="" />
-                  </div>
-
-                  <div>
-						   <label for="contactEmail">Email <span class="required">*</span></label>
-						   <input name="contactEmail" type="text" id="contactEmail" size="35" value="" />
-                  </div>
-
-                  <div>
-						   <label for="contactSubject">Subject</label>
-						   <input name="contactSubject" type="text" id="contactSubject" size="35" value="" />
-                  </div>
-
-                  <div>
-                     <label  for="contactMessage">Message <span class="required">*</span></label>
-                     <textarea name="contactMessage"  id="contactMessage" rows="15" cols="50" ></textarea>
-                  </div>
-
-                  <div>
-                     <button class="submit">Submit</button>
-                     <span id="image-loader">
-                        <img src="images/loader.gif" alt="" />
-                     </span>
-                  </div>
-
-					</fieldset>
-				</form> <!-- Form End -->
-
-            <!-- contact-warning -->
-            <div id="message-warning"></div>
-            <!-- contact-success -->
-				<div id="message-success">
-               <i class="icon-ok"></i>Your message was sent, thank you!<br />
-				</div>
-
-         </div>
-
+      
 
          <!--aside class="col g-5">
 
@@ -785,14 +773,11 @@
    <footer>
 
       <div class="row">
-         <div class="col g-5 pull-right">
-            <ul class="social-links">
-               <li><a href="#"><i class="icon-github"></i></a></li>
-               <li><a href="#"><i class="icon-google-plus-sign"></i></a></li>
-               <li><a href="#"><i class="icon-linkedin"></i></a></li>
-               <li><a href="#"><i class="icon-skype"></i></a></li>
-               <li><a href="#"><i class="icon-rss-sign"></i></a></li>
-            </ul>
+            <div class="col g-7">
+                    <ul class="copyright">
+                       <li>Design by <a href="http://www.styleshout.com/" title="Styleshout">Styleshout</a></li>               
+                    </ul>
+                 </div>
          </div>
 
       </div>
