--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
             <div class="col">
                <h2><i class="icon-globe"></i>Yelp | Aug 2017 - Present</h2>
-               <p>Engineering Manager</p>
+               <p>Software Engineer</p>
             </div>
 
             <div class="col">
