--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
       <!-- modal-03 -->
 	   <div id="modal-03" class="reveal-modal">
 
-            <img class="scale-with-grid" width="600" height="400" src="images/speaking/modals/m-exapt-woman-mentoring1.jpg" alt="" />
+            <img class="scale-with-grid" width="600" height="400" src="images/speaking/modals/m-exapt-woman-mentoring1.JPG" alt="" />
  
             <div class="description-box">
                 <h4>Speed Mentoring Event, Yelp</h4>
