--- a/a-year-in-sf.html
+++ b/a-year-in-sf.html
@@ -147,7 +147,7 @@
             <h3>Culture</h3>
             <p> 
                 I have always been a person who is open to learning. 
-                After being friends with wonderful people from different backgrounds, I believe more in humanity than in any particular culture, 
+                After being friends with wonderful people from different backgrounds, I believe more in humanity than in any particular religion, 
                 including my own. I believe that people are free to choose their religion, sex or gender. 
                 I am close friends with folks who society identifies as gay/ lesbian/ transgender. 
                 As I dig deeper and spend more time with them, it becomes clearer to me that we are all humans who function differently. 
