--- a/a-year-in-sf.html
+++ b/a-year-in-sf.html
@@ -141,14 +141,14 @@
                 If you have ever stayed in SF, you will know how big of a deal it is to find a place that is affordable + good (in x different dimensions).
                 SF is one of the most expensive cities in the world. I learnt to be more aware of finances than ever before 
                 to be able to afford a stay in this city.
-                I am moving again as my fiance comes to stay with me for good. 
+                I am moving again as my fiance came to stay with me for good. 
                 Enjoying current place right now before we start with house hunting process again! </p>
 
             <h3>Culture</h3>
             <p> 
                 I have always been a person who is open to learning. 
                 After being friends with wonderful people from different backgrounds, I believe more in humanity than in any particular religion, 
-                including my own. I believe that people are free to choose their religion, sex or gender. 
+                including my own. I believe that everyone should be free to choose their religion, sex or gender. 
                 I am close friends with folks who society identifies as gay/ lesbian/ transgender. 
                 As I dig deeper and spend more time with them, it becomes clearer to me that we are all humans who function differently. 
                 And everyone is trying to be happy in their own ways. Period.</p>
@@ -164,7 +164,7 @@
                 I am not saying that every company in SF has culture that makes you feel excited to go to work. 
                 But mine does! I have the liberty to chose projects that interest me, and work for hours that leave me with great work-life balance. If you ask engineers at Yelp about what they like the most about working here, 
                 usually the answer will be either culture or people or both. 
-                I am part of <a href="https://www.yelp.com/engineering/awe">Awesome Women in Engineering at Yelp</a>, that gives me an opportunity to continue working in one of the many causes I believe in, 
+                I am part of <a href="https://www.yelp.com/engineering/awe">Awesome Women in Engineering at Yelp</a>, that gives me an opportunity to continue working in some of the many causes I believe in, 
                 women empowerment and career development. I have had worse of managers in my career, 
                 I have worked for 6 days a week from 9am to 9pm and I want to say that I really appreciate the job I currently have.</p>
 
