--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				   <div class="row">
 					   <div class="col full">
 						   <div class="slider-text">
-							   <h2>Hello world! I am <span>Tanvi</span>, Engineering Leader based in San Francisco. </h2>
+							   <h2>Hello world! I am <span>Tanvi</span>, Software Professional based in San Francisco. </h2>
 							   <!--p>Aenean condimentum, lacus sit amet luctus lobortis, dolores et quas molestias excepturi
                         enim tellus ultrices elit, amet consequat enim elit noneas sit amet luctu.</p-->
 						   </div>
