--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@
          <div class="col two-thirds">
             <div class="intro">
              <p> I originally hail from Mumbai, India. While working at a tech company in India, I dreamt about being in Bay area where most talented programmers come together to work from across the globe.
-							 I am proudly living my dream right now; I work with briliant people at <a href="https://www.yelp.com/engineering">Yelp</a> at core web team.</p>
+							 I am proudly living my dream right now; I work with briliant people at <a href="https://www.yelp.com/engineering">Yelp</a> at core web team.
+						 </p>
 						 <p> I am a logically minded, friendly, and a lifetime of a learner.
                              I read a lot of books.
                              I put efforts in being mentally and physically fit. I am currently into skiing, yoga and aerial workout with Lyra.
                              When my friends or family come to me with doubts/hesitations about themselves,
                              I often end up convincing them they can do anything.
                              I post about everyday life of coder, some of my workouts and travel pics on my Instagram account (@tanviOnInsta) </p>
+							 <p><b>Highlight of the year:</b> <a href="https://www.youtube.com/watch?v=j1Q71-HgLU4"> Marrying my boyfriend of 7 years</a>
 							 <p><b>Book I am currently reading:</b> <a href="https://www.amazon.com/4-Hour-Workweek-Escape-Live-Anywhere/dp/0307465357"> The 4-Hour Workweek </a>
 							 <p> <b>Causes I care about:</b> Equality, Education & Literacy, Health</p> <p> I take actions to compliment my intent to support these causes.
                                  I am an active contributor with <a href="https://technovationchallenge.org/" target="_blank">Technovation</a> ,
@@ -189,11 +191,30 @@
 
          </div>
       </div>
+			<div class="row">
 
-      <div class="row">
-
-		   <!-- Speaking Wrapper -->
-		   <div id="speaking-wrapper">
+			 <!-- Speaking Wrapper -->
+			 <div id="speaking-wrapper">
+				 <div class="col speaking-item">
+								 <a href="#" data-reveal-id="modal-11">
+										 <div class="item-wrap">
+														 <img src="images/speaking/realworldreact.jpg" alt=""/>
+														 <div class="speaking-item-meta">
+																 <h5>Real World React, San Francisco</h5>
+														 </div>
+										 </div>
+								 </a>
+						 </div>
+								<div class="col speaking-item">
+										<a href="#" data-reveal-id="modal-10">
+												<div class="item-wrap">
+																<img width="420" src="images/speaking/devfest.jpg" alt=""/>
+																<div class="speaking-item-meta">
+																		<h5>DevFest 2018, Siberia, Russia</h5>
+																</div>
+												</div>
+										</a>
+								</div>
 				 <div class="col speaking-item">
 								 <a href="#" data-reveal-id="modal-09">
 										 <div class="item-wrap">
@@ -204,16 +225,27 @@
 										 </div>
 								 </a>
 						 </div>
-                <div class="col speaking-item">
-                    <a href="#" data-reveal-id="modal-05">
-                        <div class="item-wrap">
-                                <img width="420" src="images/speaking/midwestjs.jpg" alt=""/>
-                                <div class="speaking-item-meta">
-                                    <h5>Midwest JS 2018, Minneapolis, MN</h5>
-                                </div>
-                        </div>
-                    </a>
-                </div>
+								<div class="col speaking-item">
+										<a href="#" data-reveal-id="modal-05">
+												<div class="item-wrap">
+																<img width="420" src="images/speaking/midwestjs.jpg" alt=""/>
+																<div class="speaking-item-meta">
+																		<h5>Midwest JS 2018, Minneapolis, MN</h5>
+																</div>
+												</div>
+										</a>
+								</div>
+
+
+			 </div> <!-- speaking Wrapper End -->
+
+
+				</div> <!-- End Row -->
+
+      <div class="row">
+
+		   <!-- Speaking Wrapper -->
+		   <div id="speaking-wrapper">
 
                 <div class="col speaking-item">
                     <a href="#" data-reveal-id="modal-06">
@@ -236,7 +268,27 @@
                             </div>
                         </a>
                    </div>
+									 <div class="col speaking-item">
+		 									 <a href="#" data-reveal-id="modal-07">
+		 											 <div class="item-wrap">
+		 															 <img width="420" src="images/speaking/wafflejs.jpg" alt=""/>
+		 															 <div class="speaking-item-meta">
+		 																	 <h5>WaffleJS June 2018, San Francisco</h5>
+		 															 </div>
+		 											 </div>
+		 									 </a>
+		 							</div>
 
+		 							<div class="col speaking-item">
+		 									 <a href="#" data-reveal-id="modal-04">
+		 											 <div class="item-wrap">
+		 															 <img width="420" src="images/speaking/wwcode.jpg" alt=""/>
+		 															 <div class="speaking-item-meta">
+		 																	 <h5>Women Who Code Connect 2018, Twitter HQ</h5>
+		 															 </div>
+		 											 </div>
+		 									 </a>
+		 							</div>
 
 		   </div> <!-- speaking Wrapper End -->
 
@@ -246,27 +298,6 @@
 
             <!-- Speaking Wrapper -->
             <div id="speaking-wrapper">
-							<div class="col speaking-item">
-									 <a href="#" data-reveal-id="modal-07">
-											 <div class="item-wrap">
-															 <img width="420" src="images/speaking/wafflejs.jpg" alt=""/>
-															 <div class="speaking-item-meta">
-																	 <h5>WaffleJS June 2018, San Francisco</h5>
-															 </div>
-											 </div>
-									 </a>
-							</div>
-
-							<div class="col speaking-item">
-									 <a href="#" data-reveal-id="modal-04">
-											 <div class="item-wrap">
-															 <img width="420" src="images/speaking/wwcode.jpg" alt=""/>
-															 <div class="speaking-item-meta">
-																	 <h5>Women Who Code Connect 2018, Twitter HQ</h5>
-															 </div>
-											 </div>
-									 </a>
-							</div>
 
                 <div class="col speaking-item">
                         <a href="#" data-reveal-id="modal-01">
@@ -471,7 +502,47 @@
 				 <a class="close-reveal-modal">Close</a>
 				</div>
 
-		</div> <!-- modal-08 End -->
+		</div> <!-- modal-09 End -->
+		<!-- modal-10 -->
+	 <div id="modal-10" class="reveal-modal">
+
+		 <img class="scale-with-grid" src="images/speaking/modals/devfest.jpg" alt="" />
+
+		 <div class="description-box">
+			 <h4>DevFest 2018, Siberia, Russia</h4>
+			 <p>DevFest Siberia is a part of the IT conference series around the world for developers, managers, students.
+				 It is organized by a non-profit community Google Developers Group.
+				 In 2018, the conference took place on the 23rd-25th of November in Novosibirsk, Russia.
+				 It was a wonderful experience to meet tech professionals from around the world and audiences from  Russia.
+			 </p>
+					<span class="categories"><i class="icon-tag"></i>Tech Talk</span>
+			 </div>
+
+			 <div class="link-box">
+					<a href="https://gdg-siberia.com/">Details</a>
+				<a class="close-reveal-modal">Close</a>
+			 </div>
+
+	 </div> <!-- modal-10 End -->
+
+	 <!-- modal-11 -->
+	<div id="modal-11" class="reveal-modal">
+
+		<img class="scale-with-grid" src="images/speaking/modals/realworldreact.jpg" alt="" />
+
+		<div class="description-box">
+			<h4>Real World React, San Francisco</h4>
+			<p><a href="https://www.realworldreact.com/">Real World React</a> organizes talks and workshops on using React in real-world. The meetups are organized
+			in different locations in San Francisco with speakers from some of the top companies in bay area. </p>
+				 <span class="categories"><i class="icon-tag"></i>Tech Talk, React</span>
+			</div>
+
+			<div class="link-box">
+				 <a href="https://www.meetup.com/Real-World-React/events/255854364/">Details</a>
+			 <a class="close-reveal-modal">Close</a>
+			</div>
+
+	</div> <!-- modal-11 End -->
 
    </section> <!-- Speaking End -->
 
