--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
          <div class="col two-thirds">
             <div class="intro">
              <p> I originally hail from Mumbai, India. While working at a tech company in India, I dreamt about being in Bay area where most talented programmers come together to work from across the globe.
-							 I am proudly living my dream right now; I work with briliant people at <a href="https://www.yelp.com/engineering">Yelp</a> at core web team.
+							 I am proudly living my dream right now; I work with briliant people at <a href="https://eng.uber.com/">Uber</a> in one of the Uber Marketplace teams.
 						 </p>
 						 <p> I am a logically minded, friendly, and a lifetime of a learner.
                              I read a lot of books.
@@ -123,7 +123,7 @@
                              When my friends or family come to me with doubts/hesitations about themselves,
                              I often end up convincing them they can do anything.
                              I post about everyday life of coder, some of my workouts and travel pics on my Instagram account (@tanviOnInsta) </p>
-							 <p><b>Highlight of the year:</b> <a href="https://www.youtube.com/watch?v=j1Q71-HgLU4"> Marrying my boyfriend of 7 years</a>
+							 <p><b>Highlight of last year:</b> <a href="https://www.youtube.com/watch?v=j1Q71-HgLU4"> Marrying my boyfriend of 7 years</a>
 							 <p><b>Book I am currently reading:</b> <a href="https://www.amazon.com/4-Hour-Workweek-Escape-Live-Anywhere/dp/0307465357"> The 4-Hour Workweek </a>
 							 <p> <b>Causes I care about:</b> Equality, Education & Literacy, Health</p> <p> I take actions to compliment my intent to support these causes.
                                  I am an active contributor with <a href="https://technovationchallenge.org/" target="_blank">Technovation</a> ,
@@ -138,7 +138,7 @@
 
       </div>
 
-      <div class="row">
+      <!--div class="row">
 
          <div class="services-wrapper">
 
@@ -167,7 +167,7 @@
                <p>Web Developer</p>
             </div>
 
-         </div> <!-- Services-Wrapper End -->
+         </div--> <!-- Services-Wrapper End -->
 
       </div> <!--end row -->
 
