Adds new content

--- a/index.html
+++ b/index.html
@@ -196,6 +196,17 @@
 			 <!-- Speaking Wrapper -->
 			 <div id="speaking-wrapper">
 				 <div class="col speaking-item">
+								 <a href="#" data-reveal-id="modal-12">
+										 <div class="item-wrap">
+														 <img src="images/speaking/code.jpeg" alt=""/>
+														 <div class="speaking-item-meta">
+																 <h5>Web Directions Code, Australia</h5>
+														 </div>
+										 </div>
+								 </a>
+						 </div>
+
+				 <div class="col speaking-item">
 								 <a href="#" data-reveal-id="modal-11">
 										 <div class="item-wrap">
 														 <img src="images/speaking/realworldreact.jpg" alt=""/>
@@ -225,16 +236,7 @@
 										 </div>
 								 </a>
 						 </div>
-								<div class="col speaking-item">
-										<a href="#" data-reveal-id="modal-05">
-												<div class="item-wrap">
-																<img width="420" src="images/speaking/midwestjs.jpg" alt=""/>
-																<div class="speaking-item-meta">
-																		<h5>Midwest JS 2018, Minneapolis, MN</h5>
-																</div>
-												</div>
-										</a>
-								</div>
+
 
 
 			 </div> <!-- speaking Wrapper End -->
@@ -246,6 +248,16 @@
 
 		   <!-- Speaking Wrapper -->
 		   <div id="speaking-wrapper">
+							 <div class="col speaking-item">
+									 <a href="#" data-reveal-id="modal-05">
+											 <div class="item-wrap">
+															 <img width="420" src="images/speaking/midwestjs.jpg" alt=""/>
+															 <div class="speaking-item-meta">
+																	 <h5>Midwest JS 2018, Minneapolis, MN</h5>
+															 </div>
+											 </div>
+									 </a>
+							 </div>
 
                 <div class="col speaking-item">
                     <a href="#" data-reveal-id="modal-06">
@@ -279,16 +291,6 @@
 		 									 </a>
 		 							</div>
 
-		 							<div class="col speaking-item">
-		 									 <a href="#" data-reveal-id="modal-04">
-		 											 <div class="item-wrap">
-		 															 <img width="420" src="images/speaking/wwcode.jpg" alt=""/>
-		 															 <div class="speaking-item-meta">
-		 																	 <h5>Women Who Code Connect 2018, Twitter HQ</h5>
-		 															 </div>
-		 											 </div>
-		 									 </a>
-		 							</div>
 
 		   </div> <!-- speaking Wrapper End -->
 
@@ -298,6 +300,16 @@
 
             <!-- Speaking Wrapper -->
             <div id="speaking-wrapper">
+							<div class="col speaking-item">
+									 <a href="#" data-reveal-id="modal-04">
+											 <div class="item-wrap">
+															 <img width="420" src="images/speaking/wwcode.jpg" alt=""/>
+															 <div class="speaking-item-meta">
+																	 <h5>Women Who Code Connect 2018, Twitter HQ</h5>
+															 </div>
+											 </div>
+									 </a>
+							</div>
 
                 <div class="col speaking-item">
                         <a href="#" data-reveal-id="modal-01">
@@ -543,6 +555,25 @@
 			</div>
 
 	</div> <!-- modal-11 End -->
+	<!-- modal-12 -->
+ <div id="modal-12" class="reveal-modal">
+
+	 <img class="scale-with-grid" src="images/speaking/modals/code1.jpg" alt="" />
+
+	 <div class="description-box">
+		 <h4>Web Directions Code, Australia</h4>
+		 <p><a href="https://www.webdirections.org/code/">Web Directions Code</a> is Australia's conference
+			 for JavaScript Developers and Front End Engineers held in Melbuorne 2019. It was a great experience
+		 meeting with Australian technologists and other programmers from all over the world.</p>
+				<span class="categories"><i class="icon-tag"></i>Tech Talk, React</span>
+		 </div>
+
+		 <div class="link-box">
+				<a href="https://www.webdirections.org/code/">Details</a>
+			<a class="close-reveal-modal">Close</a>
+		 </div>
+
+ </div> <!-- modal-12 End -->
 
    </section> <!-- Speaking End -->
 
